[package]
name = "dtn7"
version = "0.16.15" # managed by release.sh
authors = ["Lars Baumgaertner <baumgaertner@cs.tu-darmstadt.de>"]
description = "Rust delay-tolerant-networking daemon and CLI tools based upon bp7 (bundle protocol version 7 draft)"
edition = "2018"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "network-programming"]
repository    = "https://github.com/dtn7/dtn7-rs"
keywords = ["peer2peer", "dtn"]
exclude = [".vscode/", ".travis.yml"]
readme = "README.md"

[dependencies]
bp7 = {version = "0.9.2", default-features = false }
dtn7-plus = {version = "0.5.1", default-features = false, features = ["client"] }
d7sneakers = { version = "0.2.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
serde_bytes = "0.11"
url = "2.2.2"
rand = "0.8.3"
tokio = { version = "1.10.0", features = ["net", "rt-multi-thread", "macros", "time"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
futures = "0.3.5"
futures-util = "0.3.5"
pretty_env_logger = "0.4.0"
log = "0.4"
socket2 = "0.4.1"
bytes = "1.1.0"
clap = "2.33.3"
config = {version = "0.11.0", default-features = false, features = ["toml"] }
lazy_static = "1.4.0"
anyhow = "1.0.32"
parking_lot = "0.11"
async-trait = "0.1.40"
attohttpc = { version = "0.17", default-features = false }
tinytemplate = "1.1.0"
humantime = "2.0.1"
tempfile = "3.1.0"
humansize = "1.1.0"
sled = "0.34.4"
enum_dispatch = "0.3.7"
derive_more = "0.99.14"
axum = { version = "0.2", features = ["ws"] }
http = "0.2.4"
#tower = "0.4.8"
hyper = {version ="0.14.11", features = ["client"]}
tungstenite = "0.15.0"
#measure_time = "0.7.0"

[lib]
name = "dtn7"
path = "src/lib.rs"

