[profile.release]
#debug = true
strip = true # Automatically strip symbols from the binary.

[workspace]
resolver = "2"

members = [
    "core/codegen",
    "core/dtn7",

    # internal
    "examples",
]

[patch.crates-io]
# Point to fork since tungstenite 0.21.x and 0.27.x are incompatible.
dtn7-plus = { git = "https://github.com/LeWimbes/dtn7-plus-rs.git", branch = "rust-2024" }
