[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

# If you copy one of the examples into a new project, you should be using
# [dependencies] instead, and delete the **path**.
[dev-dependencies]
bp7 = {version = "0.10.5", default-features = false }
dtn7-plus = {version = "0.6.2", default-features = false, features = ["client"] }
clap = { version = "3.1.18", features = ["cargo", "derive"] }
anyhow = "1.0.57"
serde_cbor = "0.11"
humantime = "2.1.0"
rand = "0.8.5"
tungstenite = "0.16.0"

[[example]]
name = "dtnping"
path = "dtnping.rs"

[[example]]
name = "dtnecho2"
path = "dtnecho2.rs"
