[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

# If you copy one of the examples into a new project, you should be using
# [dependencies] instead, and delete the **path**.
[dev-dependencies]
bp7 = {version = "0.10.5", default-features = false }
dtn7-plus = {version = "0.7.0", default-features = false, features = ["client"] }
clap = { version = "4.0.27", features = ["cargo", "derive"] }
anyhow = "1.0.57"
serde_cbor = "0.11"
humantime = "2.1.0"
rand = "0.8.5"
dtn7 = { path = "../core/dtn7", version = "0.19.0" }
tokio = { version = "1.16.1", features = ["net", "rt-multi-thread", "macros", "time"] }
tokio-util = { version = "0.7.2", features = ["codec"] }
tokio-serde = { version = "0.8", features = ["json"] }
parking_lot = { version = "0.12.0", features = ["send_guard"] }
futures-util = "0.3.5"
pretty_env_logger = "0.4.0"
serde_json = "1.0"
futures = "0.3.5"
lazy_static = "1.4.0"
tungstenite = "0.17.3"
log = "0.4"

[[example]]
name = "dtnping"
path = "dtnping.rs"

[[example]]
name = "dtnecho2"
path = "dtnecho2.rs"

[[example]]
name = "dtnerouting"
path = "dtnerouting.rs"

[[example]]
name = "dtnecla_connect_n"
path = "dtnecla_connect_n.rs"

[[example]]
name = "dtnecla_json_mtcp"
path = "dtnecla_json_mtcp.rs"

[[example]]
name = "dtnecla_mtcp"
path = "dtnecla_mtcp.rs"