[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"


# If you copy one of the examples into a new project, you should be using
# [dependencies] instead, and delete the **path**.
[dev-dependencies]
bp7 = { version = "0.10.7", default-features = false }
dtn7-plus = { version = "0.7.3", default-features = false, features = [
  "client",
] }
clap = { version = "4.5.47", features = ["cargo", "derive"] }
anyhow = "1.0.99"
serde_json = "1.0.143"
serde_cbor = "0.11.2"
humantime = "2.2.0"
rand = "0.8.5"
dtn7 = { path = "../core/dtn7", default-features = false, version = "0.21.0" } # managed by release.sh
tokio = { version = "1.47.1", features = [
  "net",
  "rt-multi-thread",
  "macros",
  "time",
] }
tokio-util = { version = "0.7.16", features = ["codec"] }
tokio-serde = { version = "0.9.0", features = ["json"] }
parking_lot = { version = "0.12.4", features = ["send_guard"] }
futures-util = "0.3.31"
pretty_env_logger = "0.5.0"
futures = "0.3.31"
lazy_static = "1.5.0"
tungstenite = "0.27.0"
log = "0.4.28"


[[example]]
name = "dtnping"
path = "dtnping.rs"

[[example]]
name = "dtnecho2"
path = "dtnecho2.rs"

[[example]]
name = "dtnerouting"
path = "dtnerouting.rs"

[[example]]
name = "dtnecla_connect_n"
path = "dtnecla_connect_n.rs"

[[example]]
name = "dtnecla_json_mtcp"
path = "dtnecla_json_mtcp.rs"

[[example]]
name = "dtnecla_mtcp"
path = "dtnecla_mtcp.rs"
